syntax = "proto3";
package messari.network.v1;

message BigInt {
  bytes bytes = 1;
}

message BigDecimal {
  bytes bytes = 1;
}

message Stats {
  // { id of the snapshot this belongs to } - { DataType }
  string id = 1;

  // Number of times entity has been used in a time data entity
  int64 count = 2;

  // The average of all the values
  BigDecimal mean = 3;

  // The maximum value in this entity
  BigInt max = 4;

  // The minimum value in this data set
  BigInt min = 5;

  // The sum of all the values
  BigInt sum = 7;

  // ##### Calculated Statistical Fields #####

  // The standard deviation of all values within this entity
  BigDecimal variance = 8;
}
